k8s-traefik/whoami-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: whoami
  namespace: ingress-traefik
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP
  selector:
    app: whoami
